--- a/Source/Common/Projects/NTNodes10/Stream.cls
+++ b/Source/Common/Projects/NTNodes10/Stream.cls
@@ -15,96 +15,93 @@ Option Explicit
 'TOP DOWN
 Option Compare Binary
 
-Implements IStream
-
-Private Enum MemoryFunc
-    Free = 0
-    Alloc = 1
-    Realloc = 2
+Public Enum MemoryScopes
+    Heap = 0
+    Locking = 1
+    [Local] = 2
+    [Global] = 4
 End Enum
 
-Private ScopeAs As MemoryScopes
+Private pScope As MemoryScopes
 Private Pointer As Long
 
-Private Declare Function vbaObjSet Lib "MSVBVM60.DLL" Alias "__vbaObjSet" (dstObject As Any, ByVal srcObjPtr As Long) As Long
-
-Public Function Address(Optional ByVal Offset As Long = 0) As Long ' _
+Public Property Get Address(Optional ByVal Offset As Long = 0) As Long ' _
 Retrieves the address numberical value where the memory this object is allocated at.
 Attribute Address.VB_Description = "Retrieves the address numberical value where the memory this object is allocated at."
     RtlMoveMemory ByVal VarPtr(Address), (Pointer + Offset), 4
-End Function
+End Property
 
-Friend Property Get Scope() As MemoryScopes
-    Scope = ScopeAs
+Public Property Get Scope() As MemoryScopes ' _
+Retrieves the type of memory functionally this stream is utilizing, Heap, Locking and/or Local or Global defined by the Reset method.
+    Scope = pScope
 End Property
 
 Private Sub Class_Initialize()
-    vbaObjSet Me, ObjPtr(IStream)
-    ScopeAs = MemoryScopes.Heap
+    pScope = MemoryScopes.Heap
 End Sub
 
 Private Sub Class_Terminate()
-    Reset ScopeAs
+    Reset pScope
 End Sub
 
 Private Sub MemoryModify(Optional ByVal Size As Long = 0)
-    If (Pointer <> 0) Then
-        If ((ScopeAs And MemoryScopes.Locking) = MemoryScopes.Locking) And (Not (Length = 0)) Then
-            If ((ScopeAs And MemoryScopes.Local) = MemoryScopes.Local) Then
-                If LocalUnlock(Pointer) <> 0 Then Err.Raise 8, App.Title, "Local memory unlock failure."
-            ElseIf ((ScopeAs And MemoryScopes.Global) = MemoryScopes.Global) Then
-                If GlobalUnlock(Pointer) <> 1 Then Err.Raise 8, App.Title, "Global memory unlock failure."
-            ElseIf ((ScopeAs And MemoryScopes.Heap) = MemoryScopes.Heap) Then
-                If HeapUnlock(GetProcessHeap) = 0 Then Err.Raise 8, App.Title, "Heap memory unlock failure."
-            End If
-        End If
-    End If
+'    If (Pointer <> 0) Then
+'        If ((ScopeAs And MemoryScopes.Locking) = MemoryScopes.Locking) And (Not (Length = 0)) Then
+'            If ((ScopeAs And MemoryScopes.Local) = MemoryScopes.Local) Then
+'                If LocalUnlock(Pointer) <> 0 Then Err.Raise 8, App.Title, "Local memory unlock failure."
+'            ElseIf ((ScopeAs And MemoryScopes.Global) = MemoryScopes.Global) Then
+'                If GlobalUnlock(Pointer) <> 1 Then Err.Raise 8, App.Title, "Global memory unlock failure."
+'            ElseIf ((ScopeAs And MemoryScopes.Heap) = MemoryScopes.Heap) Then
+'                If HeapUnlock(GetProcessHeap) = 0 Then Err.Raise 8, App.Title, "Heap memory unlock failure."
+'            End If
+'        End If
+'    End If
 
     If (Size = 0) Then
         If (Pointer <> 0) And (Not (Length = 0)) Then
-            If ((ScopeAs And MemoryScopes.Local) = MemoryScopes.Local) Then
+            If ((pScope And MemoryScopes.Local) = MemoryScopes.Local) Then
                 LocalFree Pointer
-            ElseIf ((ScopeAs And MemoryScopes.Global) = MemoryScopes.Global) Then
+            ElseIf ((pScope And MemoryScopes.Global) = MemoryScopes.Global) Then
                 GlobalFree Pointer
-            ElseIf ((ScopeAs And MemoryScopes.Heap) = MemoryScopes.Heap) Then
+            ElseIf ((pScope And MemoryScopes.Heap) = MemoryScopes.Heap) Then
                 HeapFree GetProcessHeap, 0, ByVal Pointer
             End If
             Pointer = 0
         End If
     Else
         If (Pointer = 0) And (Length = 0) Then
-            If ((ScopeAs And MemoryScopes.Local) = MemoryScopes.Local) Then
+            If ((pScope And MemoryScopes.Local) = MemoryScopes.Local) Then
                 Pointer = LocalAlloc(LMEM_MOVEABLE And VarPtr(Pointer), Size)
-            ElseIf ((ScopeAs And MemoryScopes.Global) = MemoryScopes.Global) Then
+            ElseIf ((pScope And MemoryScopes.Global) = MemoryScopes.Global) Then
                 Pointer = GlobalAlloc(modStrands.GMEM_MOVEABLE And VarPtr(Pointer), Size)
-            ElseIf ((ScopeAs And MemoryScopes.Heap) = MemoryScopes.Heap) Then
+            ElseIf ((pScope And MemoryScopes.Heap) = MemoryScopes.Heap) Then
                 Pointer = HeapAlloc(GetProcessHeap, 0, Size)
             End If
         Else
-            If ((ScopeAs And MemoryScopes.Local) = MemoryScopes.Local) Then
+            If ((pScope And MemoryScopes.Local) = MemoryScopes.Local) Then
                 Pointer = LocalReAlloc(Pointer, Size, LMEM_MOVEABLE Or lPtr)
-            ElseIf ((ScopeAs And MemoryScopes.Global) = MemoryScopes.Global) Then
+            ElseIf ((pScope And MemoryScopes.Global) = MemoryScopes.Global) Then
                 Pointer = GlobalReAlloc(Pointer, Size, modStrands.GMEM_MOVEABLE Or modStrands.GPTR)
-            ElseIf ((ScopeAs And MemoryScopes.Heap) = MemoryScopes.Heap) Then
+            ElseIf ((pScope And MemoryScopes.Heap) = MemoryScopes.Heap) Then
                 Pointer = HeapReAlloc(GetProcessHeap, 0, ByVal Pointer, Size)
             End If
         End If
     End If
 
-    If (Pointer <> 0) Then
-        If ((ScopeAs And MemoryScopes.Locking) = MemoryScopes.Locking) And (Not (Length = 0)) Then
-            If ((ScopeAs And MemoryScopes.Local) = MemoryScopes.Local) Then
-                If Pointer <> LocalLock(Pointer) Then Err.Raise 8, App.Title, "Local memory lock mismatch."
-            ElseIf ((ScopeAs And MemoryScopes.Global) = MemoryScopes.Global) Then
-                If Pointer <> GlobalLock(Pointer) Then Err.Raise 8, App.Title, "Global memory lock mismatch."
-            ElseIf ((ScopeAs And MemoryScopes.Heap) = MemoryScopes.Heap) Then
-                If HeapLock(GetProcessHeap) = 0 Then Err.Raise 8, App.Title, "Heap memory lock mismatch."
-            End If
-        End If
-    End If
+'    If (Pointer <> 0) Then
+'        If ((ScopeAs And MemoryScopes.Locking) = MemoryScopes.Locking) And (Not (Length = 0)) Then
+'            If ((ScopeAs And MemoryScopes.Local) = MemoryScopes.Local) Then
+'                If Pointer <> LocalLock(Pointer) Then Err.Raise 8, App.Title, "Local memory lock mismatch."
+'            ElseIf ((ScopeAs And MemoryScopes.Global) = MemoryScopes.Global) Then
+'                If Pointer <> GlobalLock(Pointer) Then Err.Raise 8, App.Title, "Global memory lock mismatch."
+'            ElseIf ((ScopeAs And MemoryScopes.Heap) = MemoryScopes.Heap) Then
+'                If HeapLock(GetProcessHeap) = 0 Then Err.Raise 8, App.Title, "Heap memory lock mismatch."
+'            End If
+'        End If
+'    End If
 End Sub
 
-Public Sub Clone(ByRef Origin As Stream, Optional ByVal Offset As Long = 0, Optional ByVal Width As Long = -1) ' _
+Public Sub Clone(ByRef Origin As Stream, Optional ByVal Offset As Long = 0, Optional ByRef Width As Long = -1) ' _
 Duplicates the Origin Stream object truning the calling instances stream data to be exactly the same, or same as a portion of the Origin strean, optionally defined by the Offset and Width.
     Dim lSize As Long
     Reset Origin.Scope
@@ -113,43 +110,38 @@ Duplicates the Origin Stream object truning the calling instances stream data to
     If Offset < lSize And Offset >= 0 And Offset + Width <= lSize And Width > 0 Then
         Length = Width
         RtlMoveMemory ByVal Pointer, ByVal Origin.Address(Offset), Width
-    Else
-        Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
     End If
 End Sub
 
-Public Sub Post(ByRef RHS As Byte) ' _
-Appends RHS bytes onto the stream at the end of the stream increasing it's size by the amount of bytes in supplied by RHS. Psudonym to Concat()
+Public Sub Post(ByRef Data As Byte) ' _
+Appends Data bytes onto the stream at the end of the stream increasing it's size by the amount of bytes in supplied by Data. Psudonym to Concat()
     Length = Length + 1
-    Plot Length - 1, RHS
+    Plot Length - 1, Data
 End Sub
 
-Public Sub Concat(ByRef RHS() As Byte) ' _
-Appends RHS bytes onto the stream at the end of the stream increasing it's size by the amount of bytes in supplied by RHS. Psudonym to Post()
-
+Public Sub Concat(ByRef Data() As Byte) ' _
+Appends Data bytes onto the stream at the end of the stream increasing it's size by the amount of bytes in supplied by Data. Psudonym to Post()
     Dim nSize As Long
-    nSize = UBound(RHS) + -CInt(Not CBool(-LBound(RHS)))
+    nSize = UBound(Data) + -CInt(Not CBool(-LBound(Data)))
     If (nSize > 0) Then
         Dim lSize As Long
         lSize = Length
         MemoryModify (nSize + lSize)
-        RtlMoveMemory ByVal Pointer + lSize, ByVal VarPtr(RHS(LBound(RHS))), nSize
-    Else
-        Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
+        RtlMoveMemory ByVal Pointer + lSize, ByVal VarPtr(Data(LBound(Data))), nSize
+'    Else
+'        Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
     End If
 End Sub
-
 
 Public Property Get Length() As Long ' _
 Gets the amount of bytes with in this instance of the stream object.
 Attribute Length.VB_Description = "Gets or sets the amount of bytes with in this instance of the stream object, least the current value set truncated on the right, or expands on the right with garbage bytes."
-
     If Pointer <> 0 Then
-        If ((ScopeAs And MemoryScopes.Local) = MemoryScopes.Local) Then
+        If ((pScope And MemoryScopes.Local) = MemoryScopes.Local) Then
             Length = LocalSize(Pointer)
-        ElseIf ((ScopeAs And MemoryScopes.Global) = MemoryScopes.Global) Then
+        ElseIf ((pScope And MemoryScopes.Global) = MemoryScopes.Global) Then
             Length = GlobalSize(Pointer)
-        ElseIf ((ScopeAs And MemoryScopes.Heap) = MemoryScopes.Heap) Then
+        ElseIf ((pScope And MemoryScopes.Heap) = MemoryScopes.Heap) Then
             Length = HeapSize(GetProcessHeap, 0, ByVal Pointer)
         End If
     Else
@@ -162,30 +154,26 @@ Sets the amount of bytes with in this instance of the stream object, least the c
     If (RHS > 0) Then
         MemoryModify RHS
     ElseIf (RHS = 0) Then
-        Reset ScopeAs
+        Reset pScope
     Else
         Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
     End If
 End Property
 
-
-
-Public Sub PlaceAt(ByRef RHS() As Byte, Optional ByVal Offset As Long = 0, Optional ByVal Width As Long = -1) ' _
-Places contents of memory byte array RHS into the stream excluding Offset number of bytes, and only up to Width but not over the total allotted.
+Public Sub PlaceAt(ByRef Data() As Byte, Optional ByVal Offset As Long = 0, Optional ByRef Width As Long = -1) ' _
+Places contents of memory byte array Data into the stream excluding Offset number of bytes, and only up to Width but not over the total allotted.
     Dim lSize As Long
     lSize = Length
-    If Width = -1 Then Width = UBound(RHS) + -CInt(Not CBool(-LBound(RHS)))
+    If Width = -1 Then Width = UBound(Data) + -CInt(Not CBool(-LBound(Data)))
     If ((lSize - Offset) <= Width) Then Width = lSize - Offset
     If (Width > 0) And (Pointer <> 0) And lSize >= (Offset + Width) Then
-        RtlMoveMemory ByVal Pointer + Offset, ByVal VarPtr(RHS(LBound(RHS))), Width
+        RtlMoveMemory ByVal Pointer + Offset, ByVal VarPtr(Data(LBound(Data))), Width
     Else
         Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
     End If
 End Sub
 
-
-
-Public Function Partial(Optional ByVal Offset As Long = 0, Optional ByVal Width As Long = -1) As Byte() ' _
+Public Function Partial(Optional ByVal Offset As Long = 0, Optional ByRef Width As Long = -1) As Byte() ' _
 Returns a sub set array of bytes from the stream excluding Offset from the beginning, and only of optional Width amount of bytes, or to the end of the stream when not supplied Width, to retrieve.
 Attribute Partial.VB_Description = "Returns a sub set array of bytes from the stream excluding Offset from the beginning, and only of optional Width amount of bytes, or to the end of the stream when not supplied Width, to retrieve."
 
@@ -203,17 +191,17 @@ Attribute Partial.VB_Description = "Returns a sub set array of bytes from the st
     Erase ret
 End Function
 
-Public Sub Prepend(ByRef RHS() As Byte) ' _
-Places RHS bytes at the beginning of the stream adding on to the streams total size by the amount of bytes in RHS.
+Public Sub Prepend(ByRef Data() As Byte) ' _
+Places Data bytes at the beginning of the stream adding on to the streams total size by the amount of bytes in Data.
 
     If (Length = 0) Or (Pointer = 0) Then
-        Concat RHS
+        Concat Data
     Else
         Dim nSize As Long
-        nSize = UBound(RHS) + -CInt(Not CBool(-LBound(RHS)))
+        nSize = UBound(Data) + -CInt(Not CBool(-LBound(Data)))
         Length = Length + (nSize * 2)
         Pull nSize
-        PlaceAt RHS, 0, nSize
+        PlaceAt Data, 0, nSize
     End If
 End Sub
 
@@ -228,7 +216,7 @@ Shifts the entire container of the stream by Offset to the left, truncating the 
             MemoryModify (lSize - Offset)
         End If
     ElseIf (Offset = lSize) Then
-        Reset ScopeAs
+        Reset pScope
     Else
         Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
     End If
@@ -245,20 +233,19 @@ Shifts the entire container of the stream by Offset to the right, truncating the
             MemoryModify (lSize - Offset)
         End If
     ElseIf (Offset = lSize) Then
-        Reset ScopeAs
-    Else
-        Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
+        Reset pScope
+'    Else
+'        Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
     End If
 End Sub
 
 
-Public Sub Reset(Optional ByRef Scopes As MemoryScopes) ' _
+Public Sub Reset(Optional ByRef ScopeAs As MemoryScopes) ' _
 Resets the stream object discarding the stored data.  Optionally setting Scopes, otherwise it keeps the current scope, for any further use.
     MemoryModify
-    ScopeAs = Scopes
 End Sub
 
-Public Function Pass(ByVal Data As Byte, Optional ByVal Offset As Long = 0, Optional ByVal Width As Long = -1) As Long ' _
+Public Function Pass(ByVal Data As Byte, Optional ByVal Offset As Long = 0, Optional ByRef Width As Long = -1) As Long ' _
 Preforms a pass for Data returning the count of it in the stream, optionally confined to Offset and Width.
     Dim lPos As Long
     Dim bPart() As Byte
@@ -268,7 +255,7 @@ Preforms a pass for Data returning the count of it in the stream, optionally con
     Next
 End Function
 
-Public Function Poll(ByVal Data As Byte, ByVal Ballot As Long, Optional ByVal Offset As Long = 0, Optional ByVal Width As Long = -1) As Long ' _
+Public Function Poll(ByVal Data As Byte, ByVal Ballot As Long, Optional ByVal Offset As Long = 0, Optional ByRef Width As Long = -1) As Long ' _
 Preforms a poll for Data returning the offset up to the numerical Ballot's occurance of it, optionally confined to Offset and Width.
     If Ballot > 0 And Width <> 0 And Length > 0 Then
         Dim lPos As Long
@@ -335,19 +322,6 @@ Topples a SubStream, which were initially an exact Partial reflection of this ba
             Clone N
             
             Set N = Nothing
-'            If (Width - lSize2) > 0 Then
-'                MemoryModify (lSize + Width + lSize2)
-'                RtlMoveMemory ByVal Pointer + Offset, ByVal SubStream.Address, lSize2
-'                RtlMoveMemory ByVal Pointer + (Offset + lSize2), ByVal Pointer + (Offset + lSize2) + (Width - lSize2), lSize
-'                MemoryModify (lSize - (Width - lSize2))
-'            ElseIf (Width - lSize2) < 0 Then
-'                MemoryModify (lSize + Width + lSize2) + (Width - lSize2)
-'                RtlMoveMemory ByVal Pointer + (Offset + lSize2), ByVal Pointer + (Offset + lSize2) + (Width - lSize2), lSize
-'                RtlMoveMemory ByVal Pointer + Offset, ByVal SubStream.Address, lSize2
-'                MemoryModify (lSize - (Width - lSize2))
-'            Else
-'                RtlMoveMemory ByVal Pointer + Offset, ByVal SubStream.Address, lSize2
-'            End If
         Else
             Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
         End If
@@ -365,86 +339,13 @@ Gets the first byte in the data stream, optionally excluding Offset number of by
     End If
 End Function
 
-Public Sub Plot(ByVal RHS As Byte, ByVal Offset As Long)   ' _
+Public Sub Plot(ByVal Offset As Long, ByVal Data As Byte)   ' _
 Sets a byte in the data stream immediatly after Offset.
 
     If Offset >= 0 And Offset < Length Then
-        RtlMoveMemory ByVal Pointer + Offset, ByVal VarPtr(RHS), 1
+        RtlMoveMemory ByVal Pointer + Offset, ByVal VarPtr(Data), 1
     Else
         Err.Raise 8, App.Title, "Invalid parameter, array, or object length requirements."
     End If
 
 End Sub
-
-Private Function IStream_Address(Optional ByVal Offset As Long = 0&) As Long
-    IStream_Address = Me.Address(Offset)
-End Function
-
-Private Sub IStream_Clone(Origin As IStream, Optional ByVal Offset As Long = 0&, Optional ByVal Width As Long = -1&)
-    Me.Clone Origin, Offset, Width
-End Sub
-
-Private Sub IStream_Concat(RHS() As Byte)
-    Me.Concat RHS
-End Sub
-
-Private Property Let IStream_Length(ByVal RHS As Long)
-    Me.Length = RHS
-End Property
-
-Private Property Get IStream_Length() As Long
-    IStream_Length = Me.Length
-End Property
-
-Private Function IStream_Partial(Optional ByVal Offset As Long = 0&, Optional ByVal Width As Long = -1&) As Byte()
-    IStream_Partial = Me.Partial(Offset, Width)
-End Function
-
-Private Function IStream_Pass(ByVal Data As Byte, Optional ByVal Offset As Long = 0&, Optional ByVal Width As Long = -1&) As Long
-    IStream_Pass = Me.Pass(Data, Offset, Width)
-End Function
-
-Private Sub IStream_Pinch(ByVal Offset As Long, ByVal Width As Long)
-    Me.Pinch Offset, Width
-End Sub
-
-Private Sub IStream_PlaceAt(RHS() As Byte, Optional ByVal Offset As Long = 0&, Optional ByVal Width As Long = -1&)
-    Me.PlaceAt RHS, Offset, Width
-End Sub
-
-Private Sub IStream_Plot(ByVal Offset As Long, ByVal RHS As Byte)
-    Me.Plot Offset, RHS
-End Sub
-
-Private Function IStream_Poll(ByVal Data As Byte, ByVal Ballot As Long, Optional ByVal Offset As Long = 0&, Optional ByVal Width As Long = -1&) As Long
-    IStream_Poll = Me.Poll(Data, Ballot, Offset, Width)
-End Function
-
-Private Function IStream_Peek(Optional ByVal Offset As Long = 0&) As Byte
-    IStream_Peek = Me.Peek(Offset)
-End Function
-
-Private Sub IStream_Post(RHS As Byte)
-    Me.Post RHS
-End Sub
-
-Private Sub IStream_Prepend(RHS() As Byte)
-    Me.Prepend RHS
-End Sub
-
-Private Sub IStream_Pull(ByVal Offset As Long)
-    Me.Pull Offset
-End Sub
-
-Private Sub IStream_Push(ByVal Offset As Long)
-    Me.Push Offset
-End Sub
-
-Private Sub IStream_Pyramid(SubStream As IStream, ByVal Offset As Long, ByVal Width As Long)
-    Me.Pyramid SubStream, Offset, Width
-End Sub
-
-Private Sub IStream_Reset(Optional Scopes As MemoryScopes)
-    Me.Reset ScopeAs
-End Sub
-
