--- a/Source/Common/Projects/NTNodes10/Serializer.cls
+++ b/Source/Common/Projects/NTNodes10/Serializer.cls
@@ -12,6 +12,10 @@ Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 Option Explicit
+'This object attempts to Serialize any object passed to the Serialize function into XML
+'and Deserialize it to an object again with the Deserialize function, optionally specifying a
+'Library if know, it makes things easier for debugging.  It handles collections and nesting too.
+
 Private Const Dent As String = "  "
 Private Indent As String
 
