--- a/Source/Common/Projects/NTSoSweet/Letters.cls
+++ b/Source/Common/Projects/NTSoSweet/Letters.cls
@@ -6,7 +6,7 @@ BEGIN
   DataSourceBehavior  = 0  'vbNone
   MTSTransactionMode  = 0  'NotAnMTSObject
 END
-Attribute VB_Name = "Rains"
+Attribute VB_Name = "Letters"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = False
@@ -16,7 +16,7 @@ Option Explicit
 
 Option Compare Binary
 
-Private xSweet As Sweet
+Private xColor As Color
 Private xIdentity As Long
 Private xRawvalue As String
 Private xEndvalue As String
@@ -28,15 +28,15 @@ Public Property Get Basename() As String
 End Property
 
 Public Property Get Typename() As String
-    Typename = "Rains"
+    Typename = "Letters"
 End Property
 
-Public Property Get Sweet() As Sweet
-    Set Sweet = xSweet
+Public Property Get Color() As Color
+    Set Color = xColor
 End Property
 
-Public Property Set Sweet(ByRef newVal As Sweet)
-    Set xSweet = newVal
+Public Property Set Color(ByRef newVal As Color)
+    Set xColor = newVal
 End Property
 
 Public Property Get Identity() As Long
@@ -70,7 +70,7 @@ End Sub
 
 Private Sub Class_Terminate()
     ClearCollection List, True
-    Set xSweet = Nothing
+    Set xColor = Nothing
 End Sub
 
 Public Property Get Count() As Long
