--- a/Source/Common/Projects/NTSoSweet/Push.cls
+++ b/Source/Common/Projects/NTSoSweet/Push.cls
@@ -16,7 +16,7 @@ Option Explicit
 
 Option Compare Binary
 
-Private xSweet As Sweet
+Private xColor As Color
 Private xIdentity As Long
 Private xRawvalue As String
 Private xEndvalue As String
@@ -33,12 +33,12 @@ Public Property Get Typename() As String
     Typename = "Push"
 End Property
 
-Public Property Get Sweet() As Sweet
-    Set Sweet = xSweet
+Public Property Get Color() As Color
+    Set Color = xColor
 End Property
 
-Public Property Set Sweet(ByRef newVal As Sweet)
-    Set xSweet = newVal
+Public Property Set Color(ByRef newVal As Color)
+    Set xColor = newVal
 End Property
 
 Public Property Get Identity() As Long
@@ -87,5 +87,5 @@ Private Sub Class_Terminate()
     Set sPushes = Nothing
     Set sMushes = Nothing
     Set sRushes = Nothing
-    Set xSweet = Nothing
+    Set xColor = Nothing
 End Sub
